--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -1,4 +1,4 @@
-#@ load("steps.lib.yml", "steps_preprocess", "steps_build", "steps_build_svc", "steps_build_tray", "steps_build_installer", "steps_build_32bit", "steps_build_svc_32bit", "steps_build_tray_32bit", "steps_build_installer_32bit", "steps_genupdate", "steps_genupdate_32bit", "steps_installgo", "steps_setup", "steps_test", "steps_inttestcrit", "steps_inttest", "steps_uploadartifacts", "steps_uploadsessartifacts", "steps_downloadsessartifacts", "steps_deletesessartifacts", "steps_deploy", "steps_build_state_msi", "steps_build_languages_msi", "steps_cleanbuild", "steps_sign", "steps_sign_installscript", "steps_build_installscripts", "steps_uploadsharedartifacts", "steps_downloadsharedartifacts", "steps_downloadallsessartifacts", "steps_sanitizeallsessartifacts")
+#@ load("steps.lib.yml", "steps_preprocess", "steps_build", "steps_build_svc", "steps_build_tray", "steps_build_installer", "steps_build_32bit", "steps_build_svc_32bit", "steps_build_tray_32bit", "steps_build_installer_32bit", "steps_genupdate", "steps_genupdate_32bit", "steps_installgo", "steps_setup", "steps_test", "steps_inttestcrit", "steps_inttest", "steps_uploadartifacts", "steps_uploadsessartifacts", "steps_downloadsessartifacts", "steps_deletesessartifacts", "steps_deploy", "steps_build_state_msi", "steps_build_languages_msi", "steps_cleanbuild", "steps_sign", "steps_sign_installscript", "steps_build_installscripts", "steps_downloadallsessartifacts", "steps_sanitizeallsessartifacts")
 
 #@ def strategy(fail_fast=True):
 matrix:
@@ -14,22 +14,8 @@ env: &env
   SHELL: bash
   GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-#@ def jobs_prepare():
-name: "Prepare"
-runs-on: ubuntu-latest
-env: *env
-timeout-minutes: 10
-steps:
-  - name: "Checkout code"
-    uses: actions/checkout@v2
-  - #@ steps_installgo()
-  - #@ steps_setup()
-  - #@ steps_uploadsharedartifacts()
-#@ end
-
 #@ def jobs_build():
 name: Build
-needs: [ prepare ]
 strategy: #@ strategy(False)
 runs-on: *runs-on
 env: *env
@@ -37,7 +23,6 @@ timeout-minutes: 10
 steps:
   - name: "Checkout code"
     uses: actions/checkout@v2
-  - #@ steps_downloadsharedartifacts()
   - #@ steps_installgo()
   - #@ steps_setup()
   - #@ steps_preprocess()
@@ -63,13 +48,11 @@ steps:
 name: "Unit Test"
 strategy: #@ strategy(False)
 runs-on: *runs-on
-needs: [ prepare ]
 env: *env
 timeout-minutes: 10
 steps:
   - name: "Checkout code"
     uses: actions/checkout@v2
-  - #@ steps_downloadsharedartifacts()
   - #@ steps_installgo()
   - #@ steps_setup()
   - #@ steps_preprocess()
@@ -99,13 +82,11 @@ steps:
 name: "Integration Test"
 strategy: #@ strategy(False)
 runs-on: *runs-on
-needs: [ prepare ]
 env: *env
 timeout-minutes: 25
 steps:
   - name: "Checkout code"
     uses: actions/checkout@v2
-  - #@ steps_downloadsharedartifacts()
   - #@ steps_installgo()
   - #@ steps_setup()
   - #@ steps_preprocess()
