--- a/activestate.generators.yaml
+++ b/activestate.generators.yaml
@@ -74,7 +74,22 @@ scripts:
     value: |
       set -e
       $constants.SET_ENV
-
-      export TEST_VERSION="${1:-1.0.0}"
+      mkdir -p ./build/test
       mkdir -p ./build/test-update
-      go run scripts/update-generator/main.go -b test-channel -v ${TEST_VERSION} -o ./build/test-update $BUILD_TARGET_DIR/$constants.BUILD_INSTALLER_TARGET $BUILD_TARGET_DIR/$constants.BUILD_DAEMON_TARGET $BUILD_TARGET_DIR/$constants.BUILD_SYSTRAY_TARGET $BUILD_TARGET_DIR/$constants.BUILD_TARGET
+      TEST_VERSION="99.99.9999"
+
+      TEST_STATE_TOOL=./build/test/$constants.BUILD_TARGET
+      TEST_STATE_SVC=./build/test/$constants.BUILD_DAEMON_TARGET
+      TEST_STATE_TRAY=./build/test/$constants.BUILD_SYSTRAY_TARGET
+      go build -o $TEST_STATE_TOOL ./internal/testhelpers/installation/fakeversioncmd
+      cp -dp $TEST_STATE_TOOL $TEST_STATE_SVC
+      cp -dp $TEST_STATE_TOOL $TEST_STATE_TRAY
+
+      go run scripts/update-generator/main.go -v ${TEST_VERSION} -o ./build/test-update $BUILD_TARGET_DIR/$constants.BUILD_INSTALLER_TARGET $TEST_STATE_TOOL $TEST_STATE_SVC $TEST_STATE_TRAY
+
+      echo "compile test-channel update"
+      go build -o $TEST_STATE_TOOL -ldflags "-X main.channel=test-channel" ./internal/testhelpers/installation/fakeversioncmd
+      cp -dp $TEST_STATE_TOOL $TEST_STATE_SVC
+      cp -dp $TEST_STATE_TOOL $TEST_STATE_TRAY
+
+      go run scripts/update-generator/main.go -b test-channel -v ${TEST_VERSION} -o ./build/test-update $BUILD_TARGET_DIR/$constants.BUILD_INSTALLER_TARGET $TEST_STATE_TOOL $TEST_STATE_SVC $TEST_STATE_TRAY
