--- a/activestate.yaml
+++ b/activestate.yaml
@@ -18,6 +18,9 @@ constants:
   - name: SYSTRAY_BUILDFLAGS
     if: ne .OS.Name "Windows"
     value: $constants.CLI_BUILDFLAGS
+  - name: SYSTRAY_BUILDFLAGS
+    if: eq .OS.Name "Linux"
+    value: -ldflags="-s -w -extldflags '-Wl,--wrap,pthread_sigmask $4' -linkmode external"
   - name: BUILD_DAEMON_TARGET
     if: ne .OS.Name "Windows"
     value: ./build/state-svc
