Ensure ubuntu icon is working

--- a/assets/state-tray.desktop
+++ b/assets/state-tray.desktop
@@ -10,5 +10,5 @@ Categories=Utility;Development;
 Hidden=false
 NoDisplay=false
 StartupNotify=false
-Icon="state-tray"
+Icon=state-tray
 Name[en_US]=ActiveState Desktop
