--- a/activestate.windows.yaml
+++ b/activestate.windows.yaml
@@ -21,7 +21,14 @@ scripts:
     if: eq .OS.Name "Windows"
     description: Copies install scripts to build dir, this script exists for transparency with CI behavior
     value: |
-      cp installers/install.ps1 build/install.ps1
+
+      BRANCH=$(git rev-parse --abbrev-ref HEAD)
+
+      INSTALLERS_DIR=build/installers/${BRANCH#release}
+      mkdir -p $INSTALLERS_DIR
+
+      cp installers/install.ps1 $INSTALLERS_DIR/install.ps1
+      cp installers/legacy-install.ps1 $INSTALLERS_DIR/legacy-install.ps1
   - name: build-msi-state
     language: bash
     description: Build the state tool MSI, requires that you have wixtools installed and on PATH
