--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -90,12 +90,14 @@ env:
 ---
 #@ def steps_sign_installscript():
 name: "Sign install.PS1"
-if: runner.os == 'Windows'
+if: runner.os == 'Windows' && contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'), github.ref)
 shell: powershell
 run: |
+   $branchInfix = $Env:GITHUB_REF.Replace("refs/heads/", "").Replace("release", "")
    $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
    $cert.Import('Cert.p12',$env:CODE_SIGNING_PASSWD,'DefaultKeySet')
-   Set-AuthenticodeSignature -FilePath build\install.ps1 -Certificate $cert
+   Set-AuthenticodeSignature -FilePath build\installers\$branchInfix\install.ps1 -Certificate $cert
+   Set-AuthenticodeSignature -FilePath build\installers\$branchInfix\legacy-install.ps1 -Certificate $cert
 env:
   CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
 #@ end
