--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -74,6 +74,9 @@ steps:
   - #@ steps_preprocess()
   - #@ steps_build()
   - #@ steps_build_svc()
+  - #@ steps_build_tray()
+  - #@ steps_build_tray_linux()
+  - #@ steps_build_installer()
   - #@ steps_genupdate()
   - #@ steps_gentest_update()
   - #@ steps_build_languages_msi()
