Implemented update dialog

--- a/activestate.yaml
+++ b/activestate.yaml
@@ -15,6 +15,9 @@ constants:
   - name: SYSTRAY_BUILD_TARGET
     if: ne .OS.Name "Windows"
     value: ./build/state-tray
+  - name: UPDLG_BUILD_TARGET
+    if: ne .OS.Name "Windows"
+    value: ./build/state-update-dialog
   - name: SYSTRAY_BUILDFLAGS
     if: ne .OS.Name "Windows"
     value: $constants.CLI_BUILDFLAGS
@@ -94,6 +97,24 @@ scripts:
     value: |
       set -e
       go build -o $constants.BUILD_INSTALLER_TARGET ./cmd/state-installer
+  - name: build-tray
+    description: Builds the State Tool system tray application
+    standalone: true
+    language: bash
+    value: |
+      go build -tags "$GO_BUILD_TAGS" -o $constants.SYSTRAY_BUILD_TARGET $constants.SYSTRAY_BUILDFLAGS $constants.SYSTRAY_PKGS
+  - name: build-updlg
+    description: Builds the State Tool update dialog app. Run with `prod` argument to build non-dev version.
+    standalone: true
+    language: bash
+    value: |
+      go build -o $constants.UPDLG_BUILD_TARGET -ldflags "-w -X github.com/wailsapp/wails.BuildMode=${1:-debug}" ./cmd/state-update-dialog
+  - name: run-updlg
+    description: Runs the update dialog in debug mode
+    standalone: true
+    language: bash
+    value: |
+      go run  -ldflags "-w -X github.com/wailsapp/wails.BuildMode=${1:-debug}" github.com/ActiveState/cli/cmd/state-update-dialog
   - name: install
     language: bash
     description: Installs the current HEAD version into GOBIN
@@ -138,12 +159,6 @@ scripts:
       $scripts.build-for.path() "windows" ./.github/deps/Windows/bin/state.exe
       $scripts.build-for.path() "linux" ./.github/deps/Linux/bin/state
       $scripts.build-for.path() "darwin" ./.github/deps/macOS/bin/state
-  - name: build-tray
-    description: Builds the State Tool system tray application
-    standalone: true
-    language: bash
-    value: |
-      go build -tags "$GO_BUILD_TAGS" -o $constants.SYSTRAY_BUILD_TARGET $constants.SYSTRAY_BUILDFLAGS $constants.SYSTRAY_PKGS
   - name: test
     language: bash
     description: Runs unit tests (not integration tests)
