--- a/activestate.windows.yaml
+++ b/activestate.windows.yaml
@@ -1,21 +1,17 @@
 constants:
   - name: BUILD_TARGET
-    if: eq .OS.Name "Windows"
     value: ./build/state.exe
   - name: BUILD_TARGET_32BIT
-    if: eq .OS.Name "Windows"
     value: ./build/state32.exe
   - name: BUILD_DAEMON_TARGET
-    if: eq .OS.Name "Windows"
     value: ./build/state-svc.exe
   - name: BUILD_INSTALLER_TARGET
-    if: eq .OS.Name "Windows"
     value: ./build/state-installer.exe
   - name: SYSTRAY_BUILD_TARGET
-    if: eq .OS.Name "Windows"
     value: ./build/state-tray.exe
+  - name: UPDLG_BUILD_TARGET
+    value: ./build/state-update-dialog.exe
   - name: SYSTRAY_BUILDFLAGS
-    if: eq .OS.Name "Windows"
     value: -ldflags="-s -w -H=windowsgui"
 scripts:
   - name: build-install-scripts
