switch to ubuntu lts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         go-version:
         - 1.15.x
         platform:
-        - ubuntu-latest
+        - ubuntu-18.04
         - macos-latest
         - windows-latest
       fail-fast: false
@@ -151,7 +151,7 @@ jobs:
         go-version:
         - 1.15.x
         platform:
-        - ubuntu-latest
+        - ubuntu-18.04
         - macos-latest
         - windows-latest
       fail-fast: false
@@ -192,7 +192,7 @@ jobs:
         go-version:
         - 1.15.x
         platform:
-        - ubuntu-latest
+        - ubuntu-18.04
         - macos-latest
         - windows-latest
       fail-fast: false
@@ -283,7 +283,7 @@ jobs:
         go-version:
         - 1.15.x
         platform:
-        - ubuntu-latest
+        - ubuntu-18.04
         - macos-latest
         - windows-latest
       fail-fast: false
@@ -365,7 +365,7 @@ jobs:
     needs:
     - build
     - unittest
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
@@ -418,7 +418,7 @@ jobs:
       with:
         name: |
           session-shared-build
-          session-build-ubuntu-latest
+          session-build-ubuntu-18.04
           session-build-macos-latest
           session-build-windows-latest
     - name: Upload Artifacts
