--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -10,7 +10,7 @@ jobs:
         go-version:
         - 1.15.x
         platform:
-        - ubuntu-latest
+        - ubuntu-18.04
         - macos-latest
         - windows-latest
       fail-fast: false
