--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -148,7 +148,17 @@ run: |
 #@ def steps_test():
 name: "Unit Tests"
 shell: bash
+if: runner.os != 'Linux'
 run: |
+  go test `go list ./... | grep -v api | grep -v integration | grep -v expect | grep -v state-tray | grep -v state-svc`
+#@ end
+---
+  #@ def steps_test_linux():
+name: "Unit Tests (Linux)"
+shell: bash
+if: runner.os == 'Linux'
+run: |
+  sudo apt-get install libgtk-3-dev libappindicator3-dev -y
   go test `go list ./... | grep -v api | grep -v integration | grep -v expect | grep -v state-tray | grep -v state-svc`
 #@ end
 ---
