--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -158,6 +158,7 @@ name: "Unit Tests (Linux)"
 shell: bash
 if: runner.os == 'Linux'
 run: |
+  sudo apt-get update
   sudo apt-get install libgtk-3-dev libappindicator3-dev libwebkit2gtk-4.0-dev -y
   go test `go list ./... | grep -v api | grep -v integration | grep -v expect | grep -v state-tray | grep -v state-svc`
 #@ end
